css tweaks - more vid links

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ SOFTWARE.
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         grid-auto-rows: minmax(max-content, 1fr);
         grid-auto-flow: dense;
+        grid-gap: 15px;
         align-items: stretch;
     }
 
@@ -113,4 +114,9 @@ article {
 }
 .article h2 {
     color: white;
+}
+
+.comment {
+    color: white;
+    font-style: italic;
 }
